<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Odszyfruj Token PGP</string>
    <string name="encrypted_message_hint">Wklej zaszyfrowaną wiadomość PGP tutaj...</string>
    <string name="private_key_hint">Wklej swój klucz prywatny PGP tutaj...</string>
    <string name="decrypt_button">🔓 Odszyfruj</string>
    <string name="copy_button">📋 Kopiuj wynik</string>
    <string name="decrypted_result_hint">Token pojawi się tutaj...</string>
    <string name="copy_success">Skopiowano do schowka!</string>
    <string name="decrypting">Odszyfrowywanie...</string>
    <string name="error_decrypt">Błąd odszyfrowywania</string>
    <string name="error_invalid_pgp">Nieprawidłowa wiadomość PGP</string>
    <string name="error_invalid_key">Nieprawidłowy klucz prywatny</string>
    <string name="load_from_file">📁 Wczytaj z pliku</string>
    <string name="file_loaded">Plik wczytany pomyślnie!</string>
    <string name="error_reading_file">Błąd odczytu pliku</string>
    <string name="password_dialog_title">🔐 Hasło do klucza prywatnego</string>
    <string name="password_dialog_message">Ten klucz prywatny wymaga hasła do odszyfrowania.</string>
    <string name="password_dialog_hint">Wprowadź hasło</string>
    <string name="password_dialog_positive">Odszyfruj</string>
    <string name="password_dialog_negative">Anuluj</string>
    <string name="token_label">Token:</string>
    <string name="token_hint">Token pojawi się tutaj...</string>
    <string name="process_text_label">🔓 Odszyfruj</string>
</resources>


